Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -381,7 +381,7 @@
  devotion_events.213.b:0 "意見を却下する。$STATESMAN$$TRADER$$DIPLOMAT$$COLONIAL_GOVERNOR$は良き顧問だ。"
  devotion_events.214.t:0 "偶像崇拝の廃止？"
  devotion_events.214.d:0 "「あなたの支配には疑問が持たれています」顧問が言う。「更に民衆はあなたの信心を疑っています。宗教的、政治的主権を確立するため、何かをしなければなりません！偶像崇拝は禁止されていますが、依然として民は聖人に祈りを捧げ、墓やモスクを巡礼し、木々や洞窟、さらには石まで崇拝しています。あなたの宗教的な力を見せて、これらを廃し、正当な権力を握ってください！」"
- devotion_events.214.a:0 "前進し、多くのものを禁止する。"
+ devotion_events.214.a:0 "やれっ！あれもこれも禁ずるのだ。"
  devotion_events.214.b:0 "なぜわざわざ？"
  devotion_events.215.t:0 "税金か農業か"
  devotion_events.215.d:0 "[Root.Country.GetName]の人々は、与えられた土地に暮らす遊牧民と農民である。我々の地方の長は、我々が重視するものについて我々の決断を必要としているが、税金と農業いずれに力を注ぐべきだろうか？ある顧問は、土地の開発が税金の回収よりも重要であると主張する。税金は土地の開発によってのみ得られ、それをしないで税金を要求すれば[Root.Country.GetName]は破滅し、人々を殺してしまうだろう。一方別の主張では、人々は干渉なしに土地を開発するであろうし、彼らに税金が要求されれば、彼らはその需要の背後に理由を見出すだろうというものである。"
