--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -404,7 +404,7 @@
  fra_alternatively_10_dev_spread_and_2tt:0 "\n£adm££dip££mil£の開発度§G10§!分が§Yブルゴーニュ§!の州にも分配されます："
  fra_complete_via_opinion_alliance_and_trust_tt:1 "\n最後に、もし @BUR ブルゴーニュ王家との外交評価や同盟によってミッションを達成した場合、帝国事件§Yブルゴーニュ継承§!が発生した際に彼らが自国側につく可能性が高くなります。"
  fra_enable_war_on_the_empire_cb_tt:0 "帝国領を§Y少ないコスト§!で征服できる開戦事由§Y対帝国戦争§!が使用可能になります"
- fra_if_completed_via_control_tt:1 "戦争時に州を§G占領中§!にミッションをクリアした場合、和平交渉での要求戦勝点コストが非常に安くなります"
+ fra_if_completed_via_control_tt:1 "戦争時に州を§G占領§!してミッションをクリアした場合、和平交渉での要求戦勝点コストが非常に安くなります"
  fra_alternatively_lose_10_devastation_and_gain_tt:0 "\n代わりに、平時にミッションを達成した場合、両州とも荒廃が§G10§!減少すると共に以下を獲得します："
  fra_every_french_province_changes_to_francien_tt:0 "§Yフランス§!文化グループ全体が、§Yリンガ・フランカ§!の概念を推進する§Yフランシア§!に同化します。"
  fra_if_possible_gain_empire_else_10_permanent_pp_tt:0 "\n帝国では§Rない§!状態でこのミッションを達成した場合、帝国ランクに上がります。そうでなければ、恒久的に戦力投射を§G10§!獲得します。"
@@ -2320,7 +2320,7 @@
  PERFECTIONISM_POLICY:0 "完璧主義の注力"
  ability_russian_modernization_mechanic:0 "近代化システム"
  russian_modernization:0 "近代化"
- russian_modernization_desc:0 "近代化は、国家内やあなたの社会への近代的な考え方の広がりを測るものです。\n\n近代化は以下の要素によって増加します：\n - [Root.Culture.GetGroupName]でない顧問の雇用\n - 知識の共有を受ける\n - あらゆる技術で時代を先行する\n - 統治者の統治スキル\n - 近代的アイデアの盗用や購入\n\n近代化は以下の要素によって低下します：\n - 負の安定度\n - 汚職\n - インフレ\n - 破産\n - 階級特権"
+ russian_modernization_desc:0 "近代化は、国家内やあなたの社会への近代的な考え方の広がりを測るものです。\n\n近代化は以下の要素によって増加します：\n - [Root.Culture.GetGroupName]でない顧問の雇用\n - 知識の共有を受ける\n - 任意の技術で時代を先行する\n - 統治者の統治スキル\n - 近代的アイデアの盗用や購入\n\n近代化は以下の要素によって低下します：\n - 負の安定度\n - 汚職\n - インフレ\n - 破産\n - 階級特権"
  ability_russian_rule_mechanic:0 "ロシア専政"
  russian_administrative_rule:0 "統治支配"
  russian_diplomatic_rule:0 "外交支配"
@@ -4630,7 +4630,7 @@
  flavor_rus.119.t:1 "[From.GetUsableNameCap]が抵抗！"
  flavor_rus.119.desc:0 "[From.GetUsableName]から宮廷に知らせが届いた。[From.GetAdjective]の[From.Monarch.GetTitle]は我々の要求を拒否したようだ。[From.GetAdjective]は合理的な要求を行った我々の顔に唾を吐きかけた。"
  flavor_rus.119.a:0 "今までしてやったことの恩返しがこれか？"
- flavor_rus.120.a.tt:0 "既知の§Y[Root.Religion.GetName]§!の国はすべて、§Y[Root.GetName]§!の評価を§G25§!得ます。"
+ flavor_rus.120.a.tt:0 "既知の§Y[Root.Religion.GetName]§!の国家はすべて、§Y[Root.GetName]§!への評価を§G25§!獲得します。"
  flavor_rus.122.t:0 "タタール遊牧民の終焉"
  flavor_rus.122.desc:1 "キエフ・ルーシの破壊者であり、我々の民を抑圧したタタールの遊牧民はもういない！最後の遊牧民は東に逃げ、あるいは戦場で死に、[Root.GetAdjective]の国境は東へ移動していく。[Root.GetUsableNameCap]は二度と外国の侵略者の下僕になることはないだろう！"
  flavor_rus.122.a:0 "祖国のために！"
