--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1115,7 +1115,7 @@
  flavor_rus.EVTNAME1002:0 "ミハイル・ロモノーソフ"
  flavor_rus.EVTDESC1002:0 "19歳の時、ロモノソーフはモスクワのスラヴ・ギリシャ・ラテン・アカデミーへ司祭の息子であると偽って入学した。サンクトペテルブルク大学での奨学金は、その後、ドイツ啓蒙哲学者クリスチャン・ウォルフの指導の下、マールブルク大学での海外留学まで続いた。ロモノーソフは様々な分野で重要なロシア科学者となったが、おそらく金星の大気圏を発見したことで最もよく知られている。彼は1764年に州の大臣に任命されたが、わずか1年後に死亡した。"
  flavor_rus.EVTNAME3203:0 "ボリス・モロゾフ"
- flavor_rus.EVTDESC3203:0 "クレムリン宮廷で長く活躍したロシアの政治家、財務官。ツァーリであるアレクシスの義理の弟であり家庭教師であった彼は、アレクシスの治世初期に政府を率いた。給与と大蔵省を監督するモロゾフは、給与を引き下げ、新しい税金を導入することによって国家の収入を増やそうとした。塩に高い税金を課したことで1648年の塩一揆を引き起こし、塩一揆の名前にもなった。修道院での短い亡命の後、モロゾフはモスクワに戻り、彼は政府の大部分支配しながら、自身は目立たないようにしていた。彼は後にイヴァン3世によるスジェブニク法典に替わる新しい法典である会議法典の起草に参加した。この法典は、農奴制と農奴を所有する貴族の独占的特権を強固にし、階級を世襲的かつ不変のものとして規定した。"
+ flavor_rus.EVTDESC3203:0 "クレムリン宮廷で長く活躍したロシアの政治家、財務官。ツァーリであるアレクシスの義兄であり家庭教師であった彼は、アレクシスの治世初期に政府を率いた。給与と財務局を監督するモロゾフは、給与を引き下げ、新しい税金を導入することによって国家の収入を増やそうとした。塩に高い税金を課したことで1648年の塩一揆を引き起こし、塩一揆の名前にもなった。修道院へ亡命したのも束の間、モロゾフはモスクワに戻り、政府の大部分を支配しながら、自身は目立たないようにしていた。後にイヴァン3世によるスジェブニク法典に替わる新しい会議法典の起草に参加した。この法典は、農奴制と農奴を所有する貴族の独占的特権を強固にし、階級を世襲的かつ不変のものとして規定した。"
  flavor_rus.EVTNAME3401:0 "パメスティ改革"
  flavor_rus.EVTDESC3401:0 "1471年にモスクワがノヴゴロドを侵略し、リトアニアがノヴゴロドの援助に失敗した後、ノヴゴロドは独立をさらに制限するコロスティニ条約を受け入れざるを得なくなった。イヴァン3世は、父親に起こった事の故に、なおも反乱を警戒し、ノヴゴロド市民の多くを追放した。彼はまた、ノヴゴロド教会の指導者をロシア正教会の指導者と入れ替えた。土地は住民から取り上げられ、兵役の代償として騎兵たちに与えられた。パメスティ制度と呼ばれた土地管理の改革をそこで確立した後、彼はそれをモスクワに導入した。ボヤールと呼ばれた地方貴族の所有地を奪い、それを軍に与えることにより、権力を強化、集中させ、軍や他の家臣たちの忠誠心を築くのに役立てた。1489年までには、ノヴゴロドはもとの姿の抜け殻となり、今ますます増大するロシアの国家の一部となった。"
  flavor_rus.EVTOPTA3401:0 "改革しよう。"
@@ -1141,11 +1141,11 @@
  flavor_rus.EVTDESC3411:0 "イヴァンは、ヨーロッパとの交易がバルト海への自由な繋がりに依存していると感じ、彼は関心を西方へ向けることを決断した。1558年、彼はリヴォニアに対するロシア支配を確立しようと戦争に突入した。ロシアは緒戦に勝利し、リヴォニアの騎士たちを打ち破ることに成功したが、その同盟国であるリトアニアは1569年にポーランドの一部となった。戦争はスウェーデンが（エストニアでの自らの利益を守るため）ロシアに対抗してポーランドを支持したことで長期化し、その間にクリミアのタタール人はアストラハンを攻撃し、さらに1571年には、ロシアの広い範囲に侵入し、モスクワを略奪し、クレムリンだけを残して焼き払った。"
  flavor_rus.EVTOPTA3411:0 "この恐ろしい侮辱のかたきを討つ。"
  flavor_rus.EVTOPTB3411:0 "反乱を鎮圧するのに利用する。"
- flavor_rus.EVTNAME3413:0 "大蔵省改革と給餌制度の廃止"
+ flavor_rus.EVTNAME3413:0 "財務局改革と給餌制度の廃止"
  flavor_rus.EVTDESC3413:0 "特筆すべきロシアの政府改革がイヴァン4世によっていくつも制定された。イヴァン4世はイヴァン3世の業績の上に築き上げ、代官（注：皇帝の臣下時にのみ与えられる領土を有した軍人・文官）階級を君主制とより密接にした。また、直接自由にできる財務局を別に創設し、資金の流入と流出に一定の効率をもたらした。給与が農民の手から直接「そのまま」支払われていた地方行政の支払制度である給餌制度の廃止と、地方行政組織の是正が、君主制をより一層効率的かつ強力なものにした。ロシアにとって不幸なことに、これらの改革は、イヴァン4世の治世末期、多大な犠牲を伴った悲惨なリヴォニア戦争後の国家が破産しない程のものではなかった。"
- flavor_rus.EVTOPTA3413:0 "大蔵省を改革し、給餌を廃止する。"
- flavor_rus.EVTOPTB3413:0 "大蔵省を改革するだけにする。"
- flavor_rus.EVTOPTC3413:0 "給餌を廃止するだけにする。"
+ flavor_rus.EVTOPTA3413:0 "財務局を改革し、給餌制を廃止する。"
+ flavor_rus.EVTOPTB3413:0 "財務局を改革するだけにする。"
+ flavor_rus.EVTOPTC3413:0 "給餌制を廃止するだけにする。"
  flavor_rus.EVTNAME3415:0 "ロシア正教会の独立宣言"
  flavor_rus.EVTDESC3415:1 "ビザンツ帝国が崩壊する少し前に、ロシア教会は事実上コンスタンティノープル総主教庁から独立した。ロシア主教協議会によって任命された府主教ヨナは、モスクワおよび全ルーシの総主教の称号を与えられた。それ以来、ロシア教会はますますコンスタンティノープルから独立し、代わりにロシア国家と結びつくようになった。"
  flavor_rus.EVTOPTA3415:1 "真の信仰を[Root.Capital.GetCapitalName]から導こう。"
