--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -59,7 +59,7 @@
  personality_options.885.a:0 "一目見て、私には良い機会だとわかっていた。"
  personality_options.5008.c:0 "私は貢献できる、より多くの人々を知っていると確信している。"
  personality_options.5008.dd:0 "私はその資金をつぎ込む、適切な場所を知っている…"
- personality_options.5008.e:0 "我々はこれを貧民に寄付せねばならない。"
+ personality_options.5008.e:0 "貧しい人々に寄付しなければならない。"
  personality_options.5014.c:0 "幸いにも我々は、信頼できる人々に囲まれている。"
  personality_options.5015.c:0 "彼の責任を拡大しよう！"
  personality_options.5017.c:0 "恐れることはない！"
