Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -6343,7 +6343,7 @@
  garjati_ideas_start:0 "ガルジャートの伝統"
  garjati_ideas_bonus:0 "ガルジャートの宿願"
  garjati_ancient_mandalas:0 "古代のマンダラ"
- garjati_ancient_mandalas_desc:0 "何世紀にも渡って、ガルジャート国は多数のマンダラに分けられていて、それらの起源は今や遠い謎であるけれども、それらは未だにこの地域内で多くのより小さな部族や国家が忠実である中心点のままである。誰がオリッサまたはガルジャート国を征服もしくは拡張したかにかかわらず、これらの構造は、そうでない構造であったよりも、より効率的でより強い軋轢が少ない支配とする。"
+ garjati_ancient_mandalas_desc:0 "何世紀にも渡って、ガルジャート国は多数のマンダラに分けられていて、それらの起源は今や遠い謎であるけれども、それらは未だにこの地域内で多くのより小さな部族や国家が忠誠を誓う中心的な存在であり続けている。誰がオリッサまたはガルジャート国を征服もしくは拡張したかにかかわらず、これらの構造によって、そうでない構造であったよりも、より効率的でより強い軋轢が少ない支配となっている。"
  garjati_tribal_feudatories:0 "封土部族"
  garjati_tribal_feudatories_desc:0 "ガルジャートの政治的展望は、理解しづらく見える人もいる。この国全体に忠実な家臣がいるので、当初示される地理的範囲よりずっと広い範囲から軍隊を呼び出す事ができる。"
  garjati_extend_tanks_and_reservoirs:0 "貯め池と貯水池の拡大"
