--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1617,7 +1617,7 @@
  bijapur_karnatak_modifier:0 "ビジャープル・カルターナカ"
  desc_bijapur_karnatak_modifier:0 "ビジャープルの南部カルナータカからコモリン岬のずっと向こうまでを支配下に置くことにより、西方貿易とデカンの多くの戦争で鍛えられた地域の一つという双方の意味で、強力な拠点を取った。地方の採用担当者へも海外からも、新兵が我が旗に殺到している。"
  bah_conquest_of_gujarat:0 "グジャラートの征服"
- desc_bah_conquest_of_gujarat:0 "グジャラートの貿易港を確保することにより、現在多くの北部インドの貿易を支配し、同様にメッカやメディナへの旅の為にほぼ全ての巡礼者によって港が利用される。"
+ desc_bah_conquest_of_gujarat:0 "グジャラートの貿易港を確保することにより、今や多くの北部インドの貿易を支配するだけでなく、メッカやメディナへの旅のためにほぼ全ての巡礼者が利用する港も支配している。"
  direct_link_with_iran:0 "ペルシア世界との直接接触"
  desc_direct_link_with_iran:0 "アラビア海沿いのいくつかの重要港の直接支配を確立することにより、イランやアラビアとの直通交通手段を確保した。このことは、我々の若い国家を強くするのに必要なペルシア人学者や行政官、並びに自国の気候では繁殖できない質の高い戦馬を入手する機会を確保できるようにした。"
  monuments_of_delhi:0 "デリーの記念碑"
