--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1204,7 +1204,7 @@
  mug_pacify_punjab_title:0 "パンジャーブの制圧"
  mug_pacify_punjab_desc:1 "5つの河川の土地は、数百年前、ガズナ朝のマフムードによる初めての征服以来ずっと、有力なアフガニスタン人の地主の本拠地となっている。これら地元の有力者は色々な意味で我が新生帝国の障害であり、存続させるつもりなら、彼らは現在我が法に従うはずだという事をみせる為、きっぱりとした応対を用いなければならない。"
  mug_afghan_frontier_title:0 "アフガニスタン国境"
- mug_afghan_frontier_desc:0 "カブリスタンやスウィースターンはインドを征服しようとする者達にとっての部隊集結地となっている。この地域は亜大陸へ入る為の重要な道に近く、パンジャーブの平原への襲撃や略奪に特化する多くの氏族の本拠地でもある。\nこの地域をこれっきりとして制圧し、外国の侵略者に対する防衛の為、ここに強力な守備兵を配置せねばならない。"
+ mug_afghan_frontier_desc:0 "カブリスタンやスウィースターンはインドを征服しようとする者達にとっての部隊集結地となっている。この地域は亜大陸へ入る為の重要な道に近く、パンジャーブの平原への襲撃や略奪に特化する多くの氏族の本拠地でもある。\nこの地域を完全に制服し、外国の侵略者に対する防衛の為、ここに強力な守備兵を配置せねばならない。"
  mug_abu_saids_dream_title:0 "アブー・サイードの夢"
  mug_abu_saids_dream_desc:0 "ティムールの崩壊後から何年か経ってさえ彼の帝国は未だ目標であり彼の子孫の夢のままだった。アブー・サイードはその帝国の再統一を実現しそうになったが、結局は彼は我が祖先がイラーキ・アジャムの大災厄と呼ぶものにより死んでしまった。\nこの落ちたマントを拾い上げ、我々が前に来た者達より遠くまで到達しよう。我々はグーラカーニー、偉大なる征服者の後継者であり、生きている者を恐れる事はない。"
  mug_follow_the_brahmaputra_title:0 "ブラマプトラ川に沿って"
