Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -929,7 +929,7 @@
  emp_lan_florentine_renaissance_title:0 "フィレンツェ・ルネサンス"
  emp_lan_florentine_renaissance_desc:0 "我々のような権威と繁栄の領域は、文化の再生、芸術、科学への新たな関心、そしていく人かが「人文科学」と呼び始めているもののために準備されている。我々はこの動きを受け入れるため、できる限りのことをするべきだ。"
  emp_lan_commission_the_mona_lisa_title:0 "モナ・リザの発注"
- emp_lan_commission_the_mona_lisa_desc:0 "[Root.Capital.GetCapitalName]の女性の1人が…謎めいた微笑を持っているが、これは、絵画として保存するのが並外れて難しいものだ。彼女の表情を真に捉えるためには、我々は非常に才能ある人物を採用する必要がある。それで、誰か知っているか？おそらく、彼女を正しく描くことができる者は、他にも才能があるはずだ。"
+ emp_lan_commission_the_mona_lisa_desc:0 "[Root.Capital.GetCapitalName]の女性の1人が…謎めいた微笑みを浮かべているが、これは、絵画で表現するのが極めて難しいものだ。彼女の表情を真に捉えるためには、我々は並外れた才能をもつ人物を採用する必要がある。それで、誰か知っているか？おそらく、彼女を正しく描くことができる者は、他にも才能があるはずだ。"
  emp_lan_influence_the_church_title:0 "教会への影響"
  emp_lan_influence_the_church_desc:0 "我々の国内における政治的および文化的影響力は強いものだが、宗教的な領域への影響力は大きく不足している。我々は信仰の制度の中で力を集めるために全力を尽くす必要があり、そうすることで、我々は人々の生活のあらゆる面に影響を与え、同時により偉大な傑出した地位へと昇るだろう。"
  emp_lan_control_the_church_title:0 "教会の制御"
