--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -251,9 +251,9 @@
  ideagroups.604.c:0 "彼は帝国の僕となろう！"
  brilliant_diplomat:0 "優秀な外交官"
  desc_brilliant_diplomat:0 "優秀な外交官は、基本的に単独で一国との関係を維持している！"
- reconciling_differences:0 "違いの調和"
- ideagroups.605.t:0 "違いの調和"
- ideagroups.605.d:0 "国によって異なる種類の政府がある場合は、互いに完全に理解できないことがある。我々は有能な外交官とともに、隣国との違いを調和させた。"
+ reconciling_differences:0 "相違点の調整"
+ ideagroups.605.t:0 "相違点の調整"
+ ideagroups.605.d:0 "国が異なる種類の政府をもっている場合は、互いに十分に理解できないことがある。有能な外交官とともに、我々は隣国のひとつと相違点を調整した。"
  ideagroups.605.a:0 "良い知らせだ！"
  improved_dip_reputation:0 "改善された評判"
  desc_improved_dip_reputation:0 "我々の勤勉な外交官のおかげで、最近、我々の外交評判が向上した。"
@@ -3034,7 +3034,7 @@
  EVTOPTA9556:0 "それがおそらく賢明だ。"
  EVTOPTB9556:0 "それは実際のところ問題ではない。"
  EVTNAME9557:0 "侵攻か防衛か"
- EVTDESC9557:0 "進行中の戦争は議会内で深刻な対立を引き起こしている。一方は、戦争が続くことを許すことによって得られるものは何もないと主張し、他方はもう後戻りすることができないと確信している。残念ながら、何らかの種類の合意に達することができないのは、現在の状況を改善するものではなく、むしろ逆だ。"
+ EVTDESC9557:0 "現在進行中の戦争は議会内で深刻な対立を引き起こしている。一方は、戦争を長引かせたとしても得られるものは何もないと主張し、他方はもう後戻りすることができないと確信している。残念ながら、いずれの合意にも至ることができないのは、現在の状況を改善するものではなく、むしろ状況が悪化するものである。"
  EVTOPTA9557:0 "おそらく攻撃こそが唯一の手段だ。"
  EVTOPTB9557:0 "今の段階では防衛の方が良いように思える。"
  EVTNAME9558:0 "食い違い"
@@ -3568,7 +3568,7 @@
  EVTOPTA723:0 "奴らをつぶせ！"
  EVTOPTB723:0 "彼らにより多くの地方の権限を与える。"
  EVTOPTC723:0 "社会改革だ。"
- EVTNAME724:0 "聖職者が異端として哲学者を非難！"
+ EVTNAME724:0 "聖職者が哲学者を異端者として非難する！"
  EVTDESC724:0 "著名な自然哲学者が、宗教的真実と矛盾する新しい主張を伝えている。聖職者は、彼を止め、処罰のために引き渡すことを要求している。いずれにせよ、これは領土内で大きな混乱を引き起こすだろう。"
  EVTOPTA724:0 "聖職者を支援する。"
  EVTOPTB724:0 "哲学者を支援する。"
@@ -4385,7 +4385,7 @@
  culture_religion_events.19.a:0 "それがどうした？"
  culture_religion_events.19.b:0 "これは、[Root.Heir.GetSheHe]が[Root.Heir.GetHerselfHimself]の殻に閉じこもる必要がある何かだ。"
  culture_religion_events.20.t:0 "[Root.Monarch.GetName]の継承"
- culture_religion_events.20.d:0 "[Root.GetAdjective]王位への法定推定後継者の欠如は、[Root.Monarch.GetHerselfHimself]だけでなく、主君の全領域にとっても重要な問題である。[Root.Monarch.Dynasty.GetName]一族の遠く離れた支系の、若く有望な世継ぎである[Root.young_heir.GetName]を、あるいは[Root.Capital.GetCapitalName]の宮廷に取り入れる可能性が示唆されており、時の経過とともに[Root.Monarch.GetName]の後継者となるだろう。"
+ culture_religion_events.20.d:0 "[Root.GetAdjective]王位への法定推定後継者の欠如は、[Root.Monarch.GetHerselfHimself]だけでなく、王国全体にとっても重要な問題である。[Root.Monarch.Dynasty.GetName]一族の遠く離れた分家の、若く有望な世継ぎである[Root.young_heir.GetName]を、[Root.Capital.GetCapitalName]の宮廷に紹介し、やがて[Root.Monarch.GetName]の後継者となることもできるかもしれないと提案されている。"
  culture_religion_events.20.a:0 "見事なアイデアだ！"
  culture_religion_events.20.b:0 "我々の王座に[family_holdings.Culture.GetName]の貴族を見ることは決してないだろう。"
  culture_religion_events.21.t:0 "信仰への疑問"
