--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -2634,7 +2634,7 @@
  per_unify_islam_title:1 "[Root.GetPreviewColorPER]イスラム統一[Root.GetPreviewColorPER_end]"
  per_unify_islam_desc:0 "イスラム教はあまりにも長い間分裂してきた。異教徒がかつて自国の聖地であった都市を奪い、異端が我が兄弟を分離させたままにしている。自国が本当にカリフの継承を請求したければ、やる気を証明し、我が[Root.Monarch.GetTitle]の偉大な支配の下にイスラムを統一せねばならない。"
  per_our_religious_stance_title:1 "[Root.GetPreviewColorPER]自宗教の姿勢[Root.GetPreviewColorPER_end]"
- per_our_religious_stance_desc:0 "信仰や異教徒・異端者の扱いほど、意見が分かれる話題はそうない。このような姿勢は、自国の人口に影響を与えるだけではない。人口は征服の成功の度に成長するように思われる。\n神学論争を行い、[Root.GetChurchOrFallbackName]と[Root.GetDhimmiOrFallbackName]双方の意見を聞くべきだ。"
+ per_our_religious_stance_desc:0 "信仰や異教徒・異端者の扱いほど、意見が分かれる話題はそうない。この姿勢は、征服の成功の度に増加すると思われる自国の人口に影響を与えるだけでは済まない。\n神学論争を行い、[Root.GetChurchOrFallbackName]と[Root.GetDhimmiOrFallbackName]双方の意見を聞くべきだ。"
  per_our_religious_stance_at:0 "§Y異端審問官§!を雇用した状態でこのミッションを達成した場合："
  per_our_religious_stance_bt:0 "§Y神学官§!を雇用した状態でこのミッションを達成した場合："
  per_sword_of_our_faith_title:1 "[Root.GetPreviewColorPER]信仰の剣[Root.GetPreviewColorPER_end]"
@@ -3435,7 +3435,7 @@
  qara_qoyunlu_mounted_dread_title:0 "騎馬の恐怖"
  qara_qoyunlu_mounted_dread_desc:0 "自国のステップの遺産は、騎兵戦法に対する比類なき理解を染み込ませている。これら先祖代々の伝統を生かし、敵の恐怖となる精鋭騎兵部隊を結成する時だ。自国の騎兵をステップ伝来の強力な射撃武器へと変え、黒羊朝に対峙する者全てに恐怖をもたらすだろう。"
  qara_qoyunlu_princes_of_persia_title:0 "ペルシアの王子たち"
- qara_qoyunlu_princes_of_persia_desc:0 "強大なティムール帝国が断末魔を上げている。シャー・ルフの命が免れるようなく尽きようとしているため、ペルシアの裏切り者の王子たちは、最も血生臭い報復がしたくてたまらず、短剣を構えて彼の背後へと立つ。この混乱は、ティムール朝が弱っている間に攻撃し、ペルシア平定の道を開くまたとない好機だ。"
+ qara_qoyunlu_princes_of_persia_desc:0 "強大なティムール帝国が断末魔を上げている。シャー・ルフの命が免れようなく尽きようとしているため、ペルシアの裏切り者の王子たちは、最も血生臭い報復がしたくてたまらず、短剣を構えて彼の背後へと立つ。この混乱は、ティムール朝が弱っている間に攻撃し、ペルシア平定の道を開くまたとない好機だ。"
  qara_qoyunlu_dethrone_the_timurids_title:0 "ティムール血統の断絶"
  qara_qoyunlu_dethrone_the_timurids_desc:0 "かつて強大であったティムール帝国の残党に以前の栄光の影を落としており、領地支配は内紛と外圧の重みで揺らいでいる。彼らの首都ヘラートを占領し、ティムールの血統の遺産を打ち破り、彼らの治世に完全なる終止符を打たねばならない。"
  qara_qoyunlu_legacy_of_seljuk_title:0 "セルジュークの遺産"
@@ -3465,7 +3465,7 @@
  qara_qoyunlu_imperial_fabrics_title:0 "帝国の織物"
  qara_qoyunlu_imperial_fabrics_desc:0 "自帝国が成長するにつれ、自国経済も成長せねばならない。布と絹の産業が盛んになれば、富を生み出し、雇用を創出し、国際的な威信を高めることができる。自領は絹や綿の栽培に適しており、同時に自国民は織物や染色の技術を習得する準備が整っている。"
  qara_qoyunlu_heart_of_iran_title:0 "イラン心臓部への襲撃"
- qara_qoyunlu_heart_of_iran_desc:1 "何年もの間、ティムール朝の僭称者たちはイラン北部の支配に固執してきたが、今こそ自軍進軍の機が熟した。イラン心臓部を襲撃し、イラーキ・アジャム地方を請求し、我自国の旗を往古の土地に高く掲げよう。自国の野望はここで終わりではない。これは、さらなる大きな勝利への単なる足がかりにすぎない。"
+ qara_qoyunlu_heart_of_iran_desc:1 "何年もの間、ティムール朝の僭称者たちはイラン北部の支配に固執してきたが、今こそ自軍進軍の機が熟した。イラン心臓部を襲撃し、イラーキ・アジャム地方を請求し、自国の旗を往古の土地に高く掲げよう。自国の野望はここで終わりではない。これは、さらなる大きな勝利への単なる足がかりにすぎない。"
  aq_qoyunlu_last_romans_title:0 "ローマ人の最期"
  aq_qoyunlu_last_romans_desc:0 "都市トレビゾンドはアナトリアにおけるかつての偉大なビザンツ帝国最後の残滓として立っており、ローマの過ぎ去りし栄光を痛切に思い起こさせた。トレビゾンドの征服は単なる領土拡張ではなく、アナトリアにおけるローマの遺産の完全なる終止符と、自国の旗下での新時代の夜明けを意味する象徴的行為だ。頁をめくり、自らの遺産を歴史年代記に刻み込む時が来た。"
  aq_qoyunlu_tame_the_eagle_title:0 "鷲を手懐けろ"
@@ -3501,7 +3501,7 @@
  aq_qoyunlu_era_title:0 "白羊の時代"
  aq_qoyunlu_era_desc:0 "自領の至る所で、白羊の紋章、由緒ある象徴が風になびいている。自国の統治は安定と繁栄をもたらしただけではなく、自国の指導の下で文化の黄金時代が花開いた。詩、散文、音楽、舞踊、建築、科学－あらゆる文化の面が繁栄し、過去の栄光と響き合いながら、創造性と知識の新領域を切り拓いてきた。「白羊の時代」が始まり、白羊朝の旗下で、比類なき知的かつ芸術的開花の時代を迎えた。この時代を祝い、育て、啓蒙と繁栄の時代を黒い羊が支配していることをあまねく知らしめねばならない。"
  aq_qoyunlu_heart_of_iran_title:0 "イラン心臓部への襲撃"
- aq_qoyunlu_heart_of_iran_desc:0 "何年もの間、ティムール朝の僭称者たちはイラン北部の支配に固執してきたが、今こそ自軍進軍の機が熟した。イラン心臓部を襲撃し、イラーキ・アジャム地方を請求し、我自国の旗を往古の土地に高く掲げよう。自国の野望はここで終わりではない。これは、さらなる大きな勝利への単なる足がかりにすぎない。"
+ aq_qoyunlu_heart_of_iran_desc:0 "何年もの間、ティムール朝の僭称者たちはイラン北部の支配に固執してきたが、今こそ自軍進軍の機が熟した。イラン心臓部を襲撃し、イラーキ・アジャム地方を請求し、自国の旗を往古の土地に高く掲げよう。自国の野望はここで終わりではない。これは、さらなる大きな勝利への単なる足がかりにすぎない。"
  aq_qoyunlu_dethrone_the_timurids_title:0 "ティムール血統の断絶"
  aq_qoyunlu_dethrone_the_timurids_desc:0 "かつて強大であったティムール帝国の残党に以前の栄光の影を落としており、領地支配は内紛と外圧の重みで揺らいでいる。彼らの首都ヘラートを占領し、ティムールの血統の遺産を打ち破り、彼らの治世に完全なる終止符を打たねばならない。"
  aq_qoyunlu_legacy_of_seljuk_title:0 "セルジュークの遺産"
@@ -3757,7 +3757,7 @@
  mam_colonize_spice_islands_title:0 "香料諸島への到達"
  mam_colonize_spice_islands_desc:0 "はるか東方にあるという香辛料が豊富に採れる諸島の話がインドから[361.GetName]に至るまでにある全市場に駆け巡っている。この機に乗じ、これらの儲かる収入源を確保せねばならない。"
  mam_naval_enterprise_title:0 "海軍事業"
- mam_naval_enterprise_desc:0 "海はどんな船乗りにも慈悲がない危険な環境だ。強力な艦隊が支配を確立することで、地中海周辺における自国の地位はさらに向上し、熟練の海軍をさらに整備できる。"
+ mam_naval_enterprise_desc:0 "海はどんな船乗りにも無慈悲で危険な環境だ。強力な艦隊が支配を確立することで、地中海周辺における自国の地位はさらに向上し、熟練した海軍をさらに整備できる。"
  mam_rhodes_title:0 "騎士団の砦"
  mam_rhodes_desc:0 "[320.GetName]の騎士たちは、あまりにも長い間、自国の影響力に抵抗してきた。自国の影響力をさらに北へと拡大する計画を立案するにあたり、この脅威をきっぱりと根絶せねばならない。"
  mam_pearl_mediterranean_title:0 "地中海の真珠"
@@ -3782,7 +3782,7 @@
  mam_basrah_desc:0 "バスラ市場に入る交易高は、間違いなく自国の国庫に貴重な物となるだろう！"
  mam_alexandrian_trade_title:0 "アレクサンドリア交易"
  mam_alexandrian_trade_desc:0 "地中海を横断するこの自国の港で外国商人が独占握ることを許す余裕などない。この模刻表に向け、自国交易商を支援するために、いくつかの新市場の建設に資金提供すべきだ。"
- mam_father_african_rivers_title:0 "アフリカの川の父"
+ mam_father_african_rivers_title:0 "アフリカの父なる川"
  mam_father_african_rivers_desc:0 "ナイル川が自国民の生命線であることに疑いようはない。物資を運び、作物を育て、命を救う水を供給するためにナイル川を利用することは、その用途のほんの一部に過ぎない。ナイルの川岸に投資することは賢明であろう。"
  mam_dar_al_hadith_turba_title:0 "ダール・アル＝ハディース・トゥルバ"
  mam_dar_al_hadith_turba_desc:0 "教育は啓蒙された国民にとって不可欠な取り組みだ。最高品質の教育を求めている者たち全員に提供することは、国家の責任だ！"
@@ -3815,7 +3815,7 @@
  mam_khass_al_sultan_title:0 "スルタンのハーッス"
  mam_khass_al_sultan_desc:0 "穀物交易は隣国との外交関係を拡大し、さらに自国の豊かさを増すための素晴らしい方法だ。より良い流れ生産を確立することで、間違いなく輸出と国内流通の割当分全てを達成できるだろう。"
  mam_assign_waqf_title:0 "ワクフの指定"
- mam_assign_waqf_desc:0 "恵まれない人々や特に教育機関への援助に硬貨や富を準備することである。慈善事業は敬虔で繁栄した社会の活力源であり証だ！"
+ mam_assign_waqf_desc:0 "恵まれない人々や特に教育機関を援助するには、硬貨や富を準備することである。慈善事業は敬虔で繁栄した社会の活力源であり証だ！"
  mam_unlock_galley_doctrine_tt:1 "海軍ドクトリン§Yマムルークのガレー船§!が利用可能になります。このドクトリンの効果：\nガレー船の戦闘能力：§G+15%§!\nガレー船のコスト：§G-25%§!"
  mam_unlock_light_doctrine_tt:0 "海軍ドクトリン§Yマムルークの商船§!が利用可能になります。このドクトリンの効果：\n船の交易力：§G+15%§!\n小型船のコスト：§G-25%§!"
  mam_unlock_warships_doctrine_tt:0 "海軍ドクトリン§Yマムルークの軍艦§!が利用可能になります。このドクトリンの効果：\n大型船の戦闘能力：§G+10%§!\n海軍交戦幅国家補正：§G+10%§!"
@@ -3863,7 +3863,7 @@
  strong_mamluk_regulations_key:0 "強大なマムルークの規制"
  no_nation_med_stronger_navy_tt:0 "地中海周辺に自国より大きな海軍を持つ国家が存在しない"
  mam_indebted_privilege_no_merc_loss_tt:0 "階級特権「§Y[Root.GetBurghersOrFallbackName]への借款§!」は重商主義を減少させなくなります。\n"
- mam_trade_building_prosperity_tt:0 "§Y交易§!系建物が建造されている州で繁栄を§G5§!獲得します。"
+ mam_trade_building_prosperity_tt:0 "州に§Y交易§!系建物を建造すると繁栄を§G5§!獲得します。"
  unlock_karimi_stations_reform_tt:0 "政府改革§Yカーリミーの詰所§!が利用可能になります"
  no_westerner_trading_in_cloves_tt:0 "§Y西洋§!技術グループの国家の中で§Yクローブ§!を交易している国家が存在しない"
  unlock_privilege_estate_burghers_foreign_expeditions_tt:1 "[Root.GetBurghersOrFallbackName]の階級特権§Y外国マムルーク探検隊§!が利用可能になります"
@@ -4049,7 +4049,7 @@
  kashifs:0 "カーシフ"
  kashifs_desc:0 "カーシフ行政官は、統治当局に代わって記録管理、書簡交換、財務、通信などの業務を担当する。国家の行政機構を維持し、効果的な統治を行う上で重要な役割を果たしている。これらの行政官は多くの場合、国家運営を助ける知識豊富な人物であり、支配者と社会のさまざまな層との仲介役を務める。"
  mam_export_grain_title:0 "穀物の輸出"
- mam_export_grain_desc:2 "§Y[From.GetName]§!に穀物を輸出しますか？50£adm£の費用がかかり、重商主義が§G+2§!されます。\n\n[From.GetName]は君主が死亡もしくは外交関係を破棄するまで「§Y穀物の貿易輸入§!」を獲得し、以下の効果を得ます：\n供給限界補正：§G+10%§!\n開発コスト：§G-5%§!\n国家不穏度：§G-1§!"
+ mam_export_grain_desc:2 "§Y[From.GetName]§!に穀物を輸出しますか？50£adm£の費用がかかり、重商主義が§G+2§!されます。\n\n[From.GetName]は君主が死亡もしくは外交関係を破棄するまで「§Y穀物の交易輸入§!」を獲得し、以下の効果を得ます：\n供給限界補正：§G+10%§!\n開発コスト：§G-5%§!\n国家不穏度：§G-1§!"
  REQUIRES_ALLIANCE_OR_SUBJECT_TT:1 "§R[From.GetName]が同盟国または従属国でなければならない§!"
  is_already_trading_grain_tt:0 "我々はすでに[From.GetName]と穀物を取引している"
  must_be_within_distance_tt:0 "[From.GetName]の市場は我々の州から遠すぎる"
