--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -243,7 +243,7 @@
  corruption_event.1.d:0 "多くの交易商は、同国人も外国人も同様にだましたり、商品の品質について嘘をついたり、詐欺的な約束をすることで知られているが、[Root.GetAdjective]の商人たちは競争的ではあるものの、信頼できる者としてよく知られている。彼らは時として交易相手ではなく自分に有利な契約を結ぶことはあっても、嘘をついたり賄賂を受けることはほとんどない。これにより、我々は世界中の交易商の中で第一候補となっている。"
  corruption_event.1.a:0 "どうして最高の提案ができるのに嘘をつく必要があるのかね。"
  corruption_event.2.t:0 "隣人を信じる"
- corruption_event.2.d:0 "市民には、取引において信頼と誠意を示すことが求められているものだが、多くの国では、まともにリスクを受け取りがたい人々が多いのが現実だ。しかし、[Root.GetName]では違う。我々は社会のさまざまな分野で腐敗の打破に成功した。人々は、役人を当てにするのに賄賂の助けを必要としないし、一般的な取引でも互いを信頼している。他人が誠実であるという皆の信念は、まさに社会を織り上げる糸であり、我が国はその輝かしい見本である。"
+ corruption_event.2.d:0 "市民は、取引において信頼と誠意を示すことが推奨されるものだが、多くの国では、人々がリスクを負う余裕がないのが現実である。しかし、[Root.GetName]では違う。我々は社会のさまざまな分野で汚職を撲滅することに成功した。人々は、役人を当てにするのに賄賂の助けを必要としないし、一般的な取引でも互いを信頼している。他人が誠実であるという皆の信念は、まさに社会を織り上げる糸であり、我が国はその輝かしい見本である。"
  corruption_event.2.a:0 "[Root.Religion.GetName]の教えに明記されているとおりだ。"
  corruption_event.3.t:0 "厳格な研究者"
  corruption_event.3.d:0 "学術研究機関も汚職と無縁なものではなく、大きな影響力をもつ立場を悪用することによって得られる利益は、研究のための良い環境を作り出すことの妨げとなることがある。しかし、[Root.GetAdjective]の科学者は、肩書や金銭的貢献よりも真の知的成果に重きを置き、これにほとんど無関心である。社会に腐敗がないからこそ、我々は私利私欲に邪魔されることなく、探求し発明することができる。"
