--- a/source/localisation/muslim_dlc_l_english.yml
+++ b/source/localisation/muslim_dlc_l_english.yml
@@ -152,7 +152,7 @@
  desc_true_mahdi:0 "予言されたイスラムの救い主であるマフディーがやって来た。彼は審判の日の前の7年間を支配し、世界から悪を取り除き、正義を再建するだろう。"
  invited_eid_al_fitr:0 "イード・アル＝フィトルに招待"
  unify_islam_title:0 "イスラム統一"
- unify_islam_desc:0 "イスラムの統一とは、単一の支配者によって統治された、ムスリムの忠実な社会全体の政治的団結である。国家の長や他の役人たちは、人々とイスラムの声であり、シャリーア法に従って統治が行われなければならない。"
+ unify_islam_desc:0 "イスラムの統一とは、忠実なムスリムの共同体全体が政治的に統一され、単一の支配者によって統治されることである。国家の長や他の役人たちは、国民とイスラムの代弁者であり、シャリーア法に従って統治が行われなければならない。"
  unified_islam:0 "統一されたイスラム"
  desc_unified_islam:0 "イスラムの人々は統一されており、慈悲深い国家に有利なことに、彼らの内部的な差異は忘れられている。"
  change_religion_sunni_title:0 "スンナ派に改宗"
