--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -4444,7 +4444,7 @@
  tatars_successors_of_the_golden_horde_title:0 "大ウルスの後継者たち"
  tatars_successors_of_the_golden_horde_desc:0 "「偉大なる国家」を意味する大ウルスは、キプチャクに与えられた名前である。しかし、そのマントを請求しようとする多くのタタール部族の間で分裂し、没落してしまった。この黄金の遺産を復元する者は我々である。"
  tatars_consolidate_urals_title:0 "ウラル山脈の合併"
- tatars_consolidate_urals_desc:0 "ウラルの土地は遊牧民には適していないが、多くのタタール人の故郷であり、キプチャクの重要な一部であった。この森と雪の大地を征服しよう"
+ tatars_consolidate_urals_desc:0 "ウラルの土地は遊牧民には適していないが、多くのタタール人の故郷であり、キプチャクの重要な一部であった。この森と雪の大地を征服しよう。"
  tatars_kazakhs_title:0 "カザフ民族"
  tatars_kazakhs_desc:0 "さらにずっとステップに入り込まねばならない。東方へと行進する際は、カザフは我がオルドに参加させねばならない。"
  tatars_contact_with_oirat_title:0 "大元の残党"
