Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -604,7 +604,7 @@
  flavor_mam.13.d:0 "自然は気まぐれで、神々は不可解に思える。ペストは、特に大都市では絶えず存在していた。1492年のカイロでのペストは、1日で12,000人の住民を殺したと評判になっている。これは、災害においてアッラーがスルタンと共にいなかったという証明とみなされている。"
  flavor_mam.13.a:0 "我々は生き残るだろう。"
  flavor_mam.14.t:0 "空っぽの財源"
- flavor_mam.14.d:0 "ペストの危機を回避したことで、[Root.Monarch.GetTitle]は税収の管理へと目を向けた。国家は危機的なほど枯渇していたため、彼は、誰も逃れられない特別税を要求しようとした。誰も、重税を課されていたユダヤ人やキリスト教徒だけでなくモスクや宗教団体でさえ、この税は免除されなかった。カイロでは徴税人が追い出され、ダマスカスでは総督が殺された。国民から集められた資金は、マムルークのエリートに、海外からの新しい奴隷の購入に、ついにはアレクサンドリアの要塞やカイロの壮大なモスクといった公共の改善に費やされた。\n我々は何をしようか？"
+ flavor_mam.14.d:0 "ペストの危機を回避したことで、[Root.Monarch.GetTitle]は税収の管理へと目を向けた。国庫は危機的なほど枯渇していたため、彼は、誰も逃れられない特別税を要求しようとした。重税を課されていたユダヤ人やキリスト教徒だけでなくモスクや宗教団体でさえ、誰であってもこの税は免除されなかった。カイロでは徴税人が追い出され、ダマスカスでは総督が殺された。国民から搾り取った資金は、マムルークのエリートに、海外からの新しい奴隷の購入に、ついにはアレクサンドリアの要塞やカイロの壮大なモスクといった公共の改善に費やされた。\n我々は何をしようか？"
  flavor_mam.14.a:0 "彼らすべてに課税する。"
  flavor_mam.14.b:0 "ズィンミーにだけ課税する。"
  flavor_mam.15.t:0 "ポルトガルとマムルークの交易戦争"
