--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -301,7 +301,7 @@
  desc_BYZ_professional_themata_soldiers:0 "自軍を十分に教練し、今ではすべてのテマで職業軍人の構成部隊を配備している。"
  BYZ_turkish_retinue:0 "トルコ人の御供衆"
  desc_BYZ_turkish_retinue:0 "オルハン・チェレビのトルコ人の御供衆は、コンスタンティノープルに留まって城壁と自身の命を守るよう言い渡された。"
- BYZ_constantinople_outgrows_limits:0 "コンスタンティノープルの壁を超える成長"
+ BYZ_constantinople_outgrows_limits:0 "コンスタンティノープルの壁を越える成長"
  desc_BYZ_constantinople_outgrows_limits:0 "コンスタンティノープルはテオドシウスの城壁を越え、都市の発展のための不朽の一里塚となった。"
  BYZ_rumelihasari_castle:0 "ルメリヒサル城"
  desc_BYZ_rumelihasari_castle:0 "ボスポラス海峡に立つルメリヒサリ城は、ビザンツとの戦争と防衛努力を非常に脅かした。"
@@ -344,7 +344,7 @@
  desc_BYZ_to_walls:0 "我々は、僅かな兵力でコンスタンティノープルの城壁を補充することにした。"
  BYZ_denied_the_westerners:0 "西欧人の拒絶"
  desc_BYZ_denied_the_westerners:0 "我々は西側からの支援を拒否し、フィレンツェ公会議での合意から離脱した。"
- BYZ_refused_union:0 "連合を拒否"
+ BYZ_refused_union:0 "教会の合同を拒否した"
  BYZ_unity_with_constantinople:0 "コンスタンティノープルとの合同"
  desc_BYZ_unity_with_constantinople:0 "ビザンツの皇帝たちは、カトリックに信頼を寄せている。ローマ帝国最後の残党がカトリックに支配され、分裂終結への希望をかき立てている。"
  BYZ_betrayed_the_catholics_in_byzantium:0 "ビザンツ帝国に裏切られたカトリック"
@@ -642,7 +642,7 @@
  MEE_Byzantine_Events.37.d:0 "オルハン・チェレビと多くのトルコ人亡命者からなる彼の従者たちは武器を取り[TUR.Monarch.GetName]と戦う準備ができている。"
  MEE_Byzantine_Events.37.a:0 "彼らは我が国の防衛の手助けとなるだろう。"
  MEE_Byzantine_Events.37.b:0 "彼らは我が軍に必要だ！"
- MEE_Byzantine_Events.38.t:0 "コンスタンティノープルの壁を超える成長"
+ MEE_Byzantine_Events.38.t:0 "コンスタンティノープルの壁を越える成長"
  MEE_Byzantine_Events.38.d:0 "何世紀にもわたる疲弊、過疎化、災害によって、コンスタンティノープルの街は縮小し、城壁の中には多くの農地が広がっていた。ありがたいことに、この傾向は逆転し、都市は城壁を越えて人口を増やしている。"
  MEE_Byzantine_Events.38.a:0 "素晴らしき知らせだ！"
  MEE_Byzantine_Events.39.t:0 "テッサリアへの遠征"
@@ -654,7 +654,7 @@
  MEE_Byzantine_Events.40.a:0 "遠征軍を派遣しろ。"
  MEE_Byzantine_Events.40.b:0 "彼らのちっぽけな軍隊など問題ではない。"
  MEE_Byzantine_Events.41.t:0 "ビザンツ商人の脱税"
- MEE_Byzantine_Events.41.d:0 "コンスタンティノープル内で課せられた10%の関税、コンメルキオンを全額支払わなければならないことに不満を抱く多くのビザンツ帝国商人は脱税のため、免税を受けているラテン商人の手伝いを雇うという利口な戦術を採用し、自国経済に深刻な被害を与えています。多くのビザンツの交易商は、不当な扱いや交易保護主義の欠如について定期的に不満を述べています"
+ MEE_Byzantine_Events.41.d:0 "コンスタンティノープル内で課せられた10%の関税であるコンメルキオンを全額支払わなければならないことに不満を抱き、多くのビザンツ帝国商人は税金を回避するため、免税を受けているラテン商人の助けを借りるという利口な戦術を採用し、自国経済に深刻な被害を与えています。多くのビザンツの交易商は、不当な扱いや交易保護主義の欠如について定期的に不満を述べています"
  MEE_Byzantine_Events.41.a:0 "この方法を取り締まれ！"
  MEE_Byzantine_Events.41.b:0 "彼らにも同じく免税してやれ。"
  MEE_Byzantine_Events.41.c:0 "外国商人にも同じくコンメルキオンを課せ。"
