Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -251,7 +251,7 @@
  obj_large_subject:0 "強力な従属国"
  obj_large_subject_desc:0 "250を超える開発度の従属国を持つ。"
  obj_disc_army:0 "高い規律"
- obj_disc_army_desc:0 "最低でも125%の規律を持った軍隊を持つ。"
+ obj_disc_army_desc:0 "規律が125%以上の軍隊を持つ。"
  obj_huge_capital:0 "巨大首都"
  obj_huge_capital_desc:0 "首都の開発度が少なくとも50以上。"
  obj_great_general:0 "偉大なる指揮官"
@@ -4531,7 +4531,7 @@
  SUPPORT_HEIRTITLE:0 "後継者を支援"
  CANCEL_SUPPORT_HEIR:0 "後継者支援を中止"
  CANCEL_SUPPORT_HEIRTITLE:0 "後継者支援を中止"
- SUPPORT_HEIR_DESC:0 "§Y$COUNTRY$§Wの王位を得る、我々の王朝の候補者を支持するため、我々の外交官を派遣してもよろしいですか？\n毎月、我々の外交評判に大きく依存して、外交官は候補者の立場を改善するでしょう。この後継者が統治者になれば、その統治者から威信だけでなく2年間の権力を得ることになります。"
+ SUPPORT_HEIR_DESC:0 "我々の王朝の候補者が§Y$COUNTRY$§Wの玉座に就くよう支援するため、我々の外交官を派遣してもよろしいですか？\n外交官は毎月、主として我々の外交評判に応じて、候補者の立場を改善するでしょう。この後継者が統治者になれば、その統治者から威信だけでなく2年分の君主力を得ることになります。"
  CANCEL_SUPPORT_HEIR_DESC:0 "§Y$COUNTRY$§Wの王位候補者を支援している外交官を召還しますか？\n彼は作業を中止し、候補者はさらなる地位を得ることはないでしょう。"
  SUPPORTHEIRDESC:0 "彼らの王位の後継者として我々の王朝の一員を支援します。"
  CANCEL_SUPPORTHEIRDESC:0 "彼らの王位の後継者として我々の王朝の一員への支援を中止します。"
