--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -2037,7 +2037,7 @@
  prices.11.a:0 "ブルル。"
  LITTLE_ICE_AGE:0 "小氷期の寒気"
  prices.12.t:0 "コルク栓"
- prices.12.d:0 "ボトル作りの発展は、ワイン生産者がより標準化された大きさのボトルを作れるようになり、結果としてボトルへのコルクの使用を再び導入することができるようになった。これはワインを密封する方法として、古くからの布製の栓よりもはるかに効率的であり、このことは、ワインは今や、以前に可能と考えられていたよりもはるかに遠い距離を輸送できるようになったことを示している。おそらく我々は今、世界的なワイン交易の誕生を目の当たりにしている。"
+ prices.12.d:0 "ボトル作りの発展によって、ワイン生産者がより標準化された大きさのボトルを作れるようになり、結果としてボトルへのコルク栓の使用を再び導入することができるようになった。コルク栓は、古くからの布製の栓よりもはるかに効率的にワインを密封する方法であり、ワインは今や、これまで可能と考えられていた輸送距離もはるかに遠い距離を輸送できるようになった。おそらく我々は今、世界的なワイン交易の誕生を目の当たりにしている。"
  prices.12.a:0 "OK"
  WINE_CORKS:0 "ワイン国際交易の発展"
  prices.13.t:0 "新たなカーテン布"
