--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -37,7 +37,7 @@
  exploration_events.10.a:0 "調教棒さえあれば飼いならせるぞ。"
  exploration_events.10.b:0 "欲しいものを取ったら出ていけ！"
  exploration_events.11.t:0 "ばらまかれた毒矢"
- exploration_events.11.d:0 "遠征隊が$PROVINCENAME$に迫ったとき、魅惑的な海岸に立つ原住民から放たれた矢が船を襲った。大声を上げながら彼らのカヌーに飛び乗る敵から急いで離れようとしたが、乗組員の何人かが、矢に射たれ船外に転落してしまい、我々は彼らを見捨てて逃げなければならなかった。$PROVINCENAME$から離れた海に停泊すると、船の右舷全面が矢で覆われていることを発見した。\n攻撃を受けた船に乗っていた探検家は重傷を負い、彼を襲った矢には毒が塗られていた。彼は数日間発熱して床に伏し、汗をかき、うめいた。外科医の手当てと尿やオリーブ油でできた消毒剤にもかかわらず、彼はしばらく前に亡くなった。"
+ exploration_events.11.d:0 "遠征隊が$PROVINCENAME$に近づくと、誘うように海岸に立っていた原住民から矢が放たれ、船が襲われた。大声を上げながら彼らのカヌーに飛び乗る敵から急いで離れようとしたが、乗組員の何人かが、矢に射たれ船外に転落してしまい、我々は彼らを見捨てて逃げなければならなかった。$PROVINCENAME$から離れた海に停泊すると、船の右舷全面が矢で覆われていることを発見した。\n攻撃を受けた船に乗っていた探検家は重傷を負い、彼を襲った矢には毒が塗られていた。彼は数日間発熱して床に伏し、汗をかき、うめいた。外科医の手当てと尿やオリーブ油でできた消毒剤にもかかわらず、彼はしばらく前に亡くなった。"
  exploration_events.11.a:0 "こんな酷い運命があるか！"
  exploration_events.12.t:0 "酔っぱらいの探検家"
  exploration_events.12.d:0 "遠征隊の一人が、よりによって我々の探検家が！$PROVINCENAME$の原住民が醸造した果実酒に対する耐性を過大評価したために、とんでもなく恥ずかしい状況に陥ってしまったのだ。忌まわしいことの詳細は報告書に載せていないが、彼は長い間まるで豚のように泥酔していた。原住民は面白がり、彼の無惨さを笑っていたが、この出来事の噂は、そのような行動を嫌う社交界の上流階級の耳に達してしまった。"
