--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -56,7 +56,7 @@
  regional_representation_reform_desc:0 "地域を代表する議員は、国家の不可欠な部分であり、その役割を強化することによって、王国の効率性と正統性を保証する。"
  separation_of_power:0 "権力分立"
  political_absolutism_reform:0 "政治的絶対主義"
- political_absolutism_reform_desc:0 "最も良い国は、計画の実現と君主の意志を通して最も良く務められる。真実かつ啓蒙された君主は、繁栄を確実にするために必要な多くの変化を引き受け、そうして国のキャパシティを余すところなく利用できる。"
+ political_absolutism_reform_desc:0 "最良の国家とは、計画の実現と君主の意志を通して最善を尽くすものである。そうして真に啓蒙された君主は、繁栄を確保するために必要な多くの改革に取り組むための、その能力を余すところなく発揮することができる。"
  legislative_houses_reform:0 "二院制"
  legislative_houses_reform_desc:0 "立法府を複数の院に分けることで、古い伝統の保守・保存と必要な変化のバランスをとることができる。"
  become_a_republic_reform:0 "共和制になる"
