--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -2391,7 +2391,7 @@
  mesoamerican_ideas_start:0 "メソアメリカの伝統"
  mesoamerican_ideas_bonus:0 "メソアメリカの宿願"
  olmec_legacy:0 "オルメカの遺産"
- olmec_legacy_desc:0 "人々がやって来る前、誇り高き古代の人々であるオルメカが、これらの土地に住んでいた。彼らが残してきた伝統はまだ存続しており、彼らから、我々は社会の組織と我々の人々を統治する方法について多くのことを学んでいる。"
+ olmec_legacy_desc:0 "我々の民族がやって来る前、誇り高き古代の民族であるオルメカ族が、これらの土地に住んでいた。彼らが残してきた伝統はまだ存続しており、彼らから、我々は社会の組織と人々を統治する方法について多くのことを学んでいる。"
  altepetl:0 "アルテペトル"
  altepetl_desc:0 "我々の土地の社会構造は、ミシュテカのヌー、マヤのカフ、ナワトルのアルテペトルのいずれであれ、都市国家の存在に依存している。彼らの生産物とそれらの間の交易は、我々の世界の経済生活の中心である繋がりを形成している。"
  ball_game:0 "球技"
