--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -489,7 +489,7 @@
  nw_sunset_invasion_title:0 "日沈む地からの侵略"
  nw_sunset_invasion_desc:0 "侵略者たちは我が国から逃げ出した。しかしそれで十分だろうか？いずれは彼らはより恐ろしい軍隊とともに戻ってくるかもしれない。我々は彼らをヨーロッパへと追跡しよう。"
  gen_eur_trade_node_title:0 "国際的な優勢"
- gen_eur_trade_node_desc:0 "富の獲得は一つの方法である。しかし、他のすべてよりも裕福であることは、真の優越の証である。交易首都ノードを成長させ、その支配権を保有しよう。"
+ gen_eur_trade_node_desc:0 "富の獲得は一つの方法である。しかし、他の誰よりも裕福であることは、真の優越の証である。交易首都ノードを成長させ、その支配権を保有しよう。"
  gen_eur_defender_faith_title:0 "信仰の砦"
  gen_eur_defender_faith_desc:0 "異端を許容してはならない。[Root.Religion.GetName]教会は道を照らすため、敬虔な模範となる人物が必要である。"
  gen_hre_electors_title:0 "帝国の野望"
@@ -497,8 +497,8 @@
  gen_hre_electors.tooltip:2 "の選帝侯が§Y[Root.GetName]§!が皇帝となることを支持している。"
  gen_hre_emperor_title:0 "シャルルマーニュの遺産"
  gen_hre_emperor_desc:1 "太古の時代、カロリング朝の王は偉大な神聖ローマ帝国を統治した。彼らの遺産は忘れられておらず、野心もまたそうである。我々は皇帝を戴冠させる必要がある。"
- gen_hre_imperial_ban_title:0 "帝国の守護"
- gen_hre_imperial_ban_desc:0 "時の経過とともに、多くの君主たちは、愚かにも帝国の国境の向こうの未開の国々に敗れ、領土を失った。残念ながら、それは我々を弱く見せている。それらを回復しよう。"
+ gen_hre_imperial_ban_title:0 "帝国を守れ"
+ gen_hre_imperial_ban_desc:0 "時の経過とともに、多くの君主たちは、愚かにも帝国の国境の向こうの未開の国々に敗れ、領土を失った。残念ながら、それでは我々が弱く見えてしまう。失った領土を回復しよう。"
  control_spice_trade_asia_title:0 "香辛料貿易"
  control_spice_trade_asia_desc:0 "様々な種類の香辛料が世界中で高く評価されている。これらの商品の世界的供給を支配することは、我々を豊かにするだろう。"
  asia_silk_road_title:0 "シルクロード"
