--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -2839,6 +2839,6 @@
  te_ika_a_maui_waho_area:0 "テ・イカ・ア・マウイ・ワホ"
  te_ika_a_maui_waho_area_name:0 "テ・イカ・ア・マウイ・ワホ"
  te_ika_a_maui_waho_area_adj:0 "東マオリ"
- barbary_coast_area_name:0 "Barbary Coast"
- barbary_coast_area_adj:0 "Barbary"
- apacheria_area_name:0 "Apacheria"
+ barbary_coast_area_name:0 "バルバリア海岸"
+ barbary_coast_area_adj:0 "バルバリア"
+ apacheria_area_name:0 "アパッチリア"
