--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -864,7 +864,7 @@
  RANDOM_WORLD_GENERATE_WORLD_SEA3:0 "ランダムな新世界を生成中…\n穴埋め中…"
  RANDOM_WORLD_GENERATE_WORLD_SMOOTHING:0 "ランダムな新世界を生成中…\n$PASS$峠を均しています…"
  POLICYVIEW_TITLE:0 "政策の選択"
- FERVOR_CHANGE:0 "毎月の変更："
+ FERVOR_CHANGE:0 "毎月の変化："
  FERVOR_VALUE2:0 "宗教的情熱ポイント："
  ENFORCE_MILITARY_ACCESS:0 "$FROM$は$TO$に軍事通行権を与えなければなりません。停戦期間が終わるまでこれを取り消すことはできません。"
  ENFORCE_FLEET_BASING_RIGHTS:0 "$FROM$は$TO$に港湾使用権を与えなければなりません。停戦期間が終わるまでこれを取り消すことはできません。"
